--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -81,9 +81,9 @@
     </div>
     <hr />
     <div class="footer-bottom-content">
-      <p>Designed By <a href="#">Harshita Vishwakarma</a></p>
+      <p>Designed By <a href="#">Aniket Sahu</a></p>
       <div class="copyright">
-        <p>&copy;Copyright <strong>Harshita Vishwakarma</strong>.All Rights Reserved</p>
+        <p>&copy;Copyright <strong>Aniket Sahu</strong>.All Rights Reserved</p>
       </div>
     </div>
   </footer>
