--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Furniture Webiste</title>
+    <title>Furniture Website</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
-
     <app-header></app-header>
     <router-outlet></router-outlet>
-  
   </body>
   </html>
 
